Removed ArgumentProcessor. Changed EternaAPI initialization messages.